samples/_failures_safe/1761347360_e4db87_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0da0638b.c: In function ‘main’:
./samples/SAFE/__tmp_0da0638b.c:168:16: error: ‘MAX’ undeclared (first use in this function)
  168 |     char input[MAX
      |                ^~~
./samples/SAFE/__tmp_0da0638b.c:168:16: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_0da0638b.c:168:19: error: expected ‘]’ at end of input
  168 |     char input[MAX
      |                   ^
      |                   ]
./samples/SAFE/__tmp_0da0638b.c:168:5: error: expected declaration or statement at end of input
  168 |     char input[MAX
      |     ^~~~
